WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211338
REGRESSION(
r261023
): [GTK][WPE] Several WebGL tests are failing
https://bugs.webkit.org/show_bug.cgi?id=211338
Summary
REGRESSION(r261023): [GTK][WPE] Several WebGL tests are failing
Diego Pino
Reported
2020-05-02 08:09:58 PDT
Many tests are failing bot in GTK and WPE after
r261023
: See:
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20(Tests)/r261031%20(13598)/results.html
WebKit Results Database:
https://results.webkit.org/?platform=GTK&platform=ios&platform=WPE&suite=layout-tests&test=fast%2Fcanvas%2Fwebgl%2Ftex-image-and-sub-image-2d-with-array-buffer-view.html
webgl/1.0.3/conformance/more/functions/copyTexImage2DBadArgs.html [ Crash ] fast/canvas/webgl/invalid-passed-params.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-array-buffer-view.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-canvas-rgb565.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-canvas-rgba4444.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-canvas-rgba5551.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-canvas.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-image-data-rgb565.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-image-data-rgba4444.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-image-data-rgba5551.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-image-data.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-image-rgb565.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-image-rgba4444.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-image-rgba5551.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-image.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-potentially-subsampled-image.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-svg-image.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-video-rgb565.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-video-rgba4444.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-video-rgba5551.html [ Failure ] fast/canvas/webgl/tex-image-with-format-and-type.html [ Failure ] fast/canvas/webgl/tex-input-validation.html [ Failure ] fast/canvas/webgl/tex-sub-image-2d-bad-args.html [ Failure ] fast/canvas/webgl/tex-sub-image-2d.html [ Failure ] fast/canvas/webgl/tex-sub-image-cube-maps.html [ Failure ] fast/canvas/webgl/uninitialized-test.html [ Failure ] webgl/1.0.3/conformance/extensions/oes-texture-float-with-canvas.html [ Failure ] webgl/1.0.3/conformance/extensions/oes-texture-float-with-image-data.html [ Failure ] webgl/1.0.3/conformance/extensions/oes-texture-float-with-image.html [ Failure ] webgl/1.0.3/conformance/extensions/oes-texture-half-float-with-canvas.html [ Failure ] webgl/1.0.3/conformance/extensions/oes-texture-half-float-with-image-data.html [ Failure ] webgl/1.0.3/conformance/extensions/oes-texture-half-float-with-image.html [ Failure ] webgl/1.0.3/conformance/misc/invalid-passed-params.html [ Failure ] webgl/1.0.3/conformance/misc/uninitialized-test.html [ Failure ] webgl/1.0.3/conformance/more/functions/texSubImage2D.html [ Failure ] webgl/1.0.3/conformance/more/functions/texSubImage2DBadArgs.html [ Failure ] webgl/1.0.3/conformance/more/functions/texSubImage2DHTMLBadArgs.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-array-buffer-view.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-canvas-rgb565.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-canvas-rgba4444.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-canvas-rgba5551.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-canvas.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-image-data-rgb565.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-image-data-rgba4444.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-image-data-rgba5551.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-image-data.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-image-rgb565.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-image-rgba4444.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-image-rgba5551.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-image.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-svg-image.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-webgl-canvas-rgb565.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-webgl-canvas-rgba4444.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-webgl-canvas-rgba5551.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-webgl-canvas.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-with-format-and-type.html [ Failure ] webgl/1.0.3/conformance/textures/tex-input-validation.html [ Failure ] webgl/1.0.3/conformance/textures/tex-sub-image-2d-bad-args.html [ Failure ] webgl/1.0.3/conformance/textures/tex-sub-image-2d.html [ Failure ] webgl/1.0.3/conformance/textures/texture-sub-image-cube-maps.html [ Failure ] webgl/1.0.3/conformance/textures/texture-upload-cube-maps.html [ Failure ] http/tests/webgl/1.0.2/texSubImage2DHTML.html [ Failure ] WPE: webgl/1.0.3/conformance/more/functions/copyTexImage2DBadArgs.html [ Crash ] fast/canvas/webgl/invalid-passed-params.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-array-buffer-view.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-canvas-rgb565.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-canvas-rgba4444.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-canvas-rgba5551.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-canvas.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-image-data-rgb565.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-image-data-rgba4444.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-image-data-rgba5551.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-image-data.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-image-rgb565.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-image-rgba4444.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-image-rgba5551.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-image.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-potentially-subsampled-image.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-svg-image.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-video-rgb565.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-video-rgba4444.html [ Failure ] fast/canvas/webgl/tex-image-and-sub-image-2d-with-video-rgba5551.html [ Failure ] fast/canvas/webgl/tex-image-with-format-and-type.html [ Failure ] fast/canvas/webgl/tex-input-validation.html [ Failure ] fast/canvas/webgl/tex-sub-image-2d-bad-args.html [ Failure ] fast/canvas/webgl/tex-sub-image-2d.html [ Failure ] fast/canvas/webgl/tex-sub-image-cube-maps.html [ Failure ] fast/canvas/webgl/uninitialized-test.html [ Failure ] http/tests/webgl/1.0.2/texSubImage2DHTML.html [ Failure ] webgl/1.0.3/conformance/extensions/oes-texture-float-with-canvas.html [ Failure ] webgl/1.0.3/conformance/extensions/oes-texture-float-with-image-data.html [ Failure ] webgl/1.0.3/conformance/extensions/oes-texture-float-with-image.html [ Failure ] webgl/1.0.3/conformance/extensions/oes-texture-half-float-with-canvas.html [ Failure ] webgl/1.0.3/conformance/extensions/oes-texture-half-float-with-image-data.html [ Failure ] webgl/1.0.3/conformance/extensions/oes-texture-half-float-with-image.html [ Failure ] webgl/1.0.3/conformance/misc/invalid-passed-params.html [ Failure ] webgl/1.0.3/conformance/misc/uninitialized-test.html [ Failure ] webgl/1.0.3/conformance/more/functions/texSubImage2D.html [ Failure ] webgl/1.0.3/conformance/more/functions/texSubImage2DBadArgs.html [ Failure ] webgl/1.0.3/conformance/more/functions/texSubImage2DHTMLBadArgs.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-array-buffer-view.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-canvas-rgb565.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-canvas-rgba4444.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-canvas-rgba5551.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-canvas.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-image-data-rgb565.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-image-data-rgba4444.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-image-data-rgba5551.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-image-data.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-image-rgb565.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-image-rgba4444.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-image-rgba5551.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-image.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-svg-image.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-webgl-canvas-rgb565.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-webgl-canvas-rgba4444.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-webgl-canvas-rgba5551.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-and-sub-image-2d-with-webgl-canvas.html [ Failure ] webgl/1.0.3/conformance/textures/tex-image-with-format-and-type.html [ Failure ] webgl/1.0.3/conformance/textures/tex-input-validation.html [ Failure ] webgl/1.0.3/conformance/textures/tex-sub-image-2d-bad-args.html [ Failure ] webgl/1.0.3/conformance/textures/tex-sub-image-2d.html [ Failure ] webgl/1.0.3/conformance/textures/texture-size.html [ Failure ] webgl/1.0.3/conformance/textures/texture-sub-image-cube-maps.html [ Failure ] webgl/1.0.3/conformance/textures/texture-upload-cube-maps.html [ Failure ]
Attachments
WIP
(10.62 KB, patch)
2020-05-04 02:34 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
Patch for landing
(18.14 KB, patch)
2020-05-13 03:40 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2020-05-04 02:34:59 PDT
Created
attachment 398357
[details]
WIP
Zan Dobersek
Comment 2
2020-05-04 02:47:10 PDT
(In reply to Zan Dobersek from
comment #1
)
> Created
attachment 398357
[details]
> WIP
Basically, on non-ANGLE code paths we have to retrieve the internal format value from the texture object, as done before the refactor.
Kenneth Russell
Comment 3
2020-05-04 09:56:05 PDT
Comment on
attachment 398357
[details]
WIP View in context:
https://bugs.webkit.org/attachment.cgi?id=398357&action=review
Thanks very much for catching and fixing this error. I'm no longer a reviewer but perhaps dino can review this? One slight issue with the ChangeLog.
> Source/WebCore/ChangeLog:8 > + No new tests (OOPS!).
This line will need to be removed from the ChangeLog in order for the CQ to accept the patch. (This is actually mentioned by the style bot.)
Kenneth Russell
Comment 4
2020-05-05 09:44:03 PDT
Zan: do you need any help revising this patch for landing?
Zan Dobersek
Comment 5
2020-05-13 03:39:11 PDT
(In reply to Kenneth Russell from
comment #4
)
> Zan: do you need any help revising this patch for landing?
No, sorry -- it just fell into my backlog.
Zan Dobersek
Comment 6
2020-05-13 03:40:17 PDT
Created
attachment 399250
[details]
Patch for landing
Zan Dobersek
Comment 7
2020-05-13 03:47:36 PDT
Comment on
attachment 399250
[details]
Patch for landing Clearing flags on attachment: 399250 Committed
r261609
: <
https://trac.webkit.org/changeset/261609
>
Zan Dobersek
Comment 8
2020-05-13 03:47:41 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9
2020-05-13 03:48:16 PDT
<
rdar://problem/63178620
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug