REGRESSION(r261023): [GTK][WPE] Several WebGL tests are failing https://bugs.webkit.org/show_bug.cgi?id=211338

Reviewed by Dean Jackson.

Source/WebCore:

For non-ANGLE-backed WebGL, we are still required to query the internal
format of the target texture for the texture sub-image commands. Falling
back to that behavior on !USE(ANGLE) removes regressions in a bunch of
WebGL tests.

* html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::texImageSourceHelper):
(WebCore::WebGLRenderingContextBase::texImageArrayBufferViewHelper):

LayoutTests:

* platform/gtk/TestExpectations: Remove failure expectations for the fixed tests.
* platform/wpe/TestExpectations: Ditto.


Canonical link: https://commits.webkit.org/224718@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261609 268f45cc-cd09-0410-ab3c-d52691b4dbfc